04_git/aws/02-downstream/02-aws-downstream/01_bootstrap/vault/yaml/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-vault-ingress-02-aws-downstream
  namespace: vault
spec:
  ingressClassName: external-nginx
  rules:
    - host: 02-aws-downstream-vault.panwang.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-vault-02-aws-downstream-ui
                port:
                  number: 8200
